// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestWrapper matches snapshot at depth of 1 1`] = `
<div
  data-children={true}
>
  Children
</div>
`;

exports[`TestWrapper matches snapshot at depth of 2 1`] = `
<div
  data-rendered={true}
>
  <div
    data-children={true}
  >
    Children
  </div>
</div>
`;

exports[`TestWrapper matches snapshot with a nested array of children at depth of 1 1`] = `
[
  <div />,
  "TEXT_NODE",
  <div
    data-children={true}
    key="div"
  />,
  <TestWrapper
    key="test"
  />,
]
`;

exports[`TestWrapper matches snapshot with a nested array of children at depth of 2 1`] = `
<div
  data-rendered={true}
>
  <div />
  TEXT_NODE
  <div
    data-children={true}
  />
  <TestWrapper />
</div>
`;

exports[`TestWrapper matches snapshot with an array of children at depth of 1 1`] = `
[
  "TEXT_NODE",
  <div
    data-children={true}
    key="div"
  />,
  <TestWrapper
    key="test"
  />,
]
`;

exports[`TestWrapper matches snapshot with an array of children at depth of 2 1`] = `
<div
  data-rendered={true}
>
  TEXT_NODE
  <div
    data-children={true}
  />
  <TestWrapper />
</div>
`;
